--- a/tetris.html
+++ b/tetris.html
@@ -22,4 +22,5 @@
     <script src="tetris.js"> </script>
     <script src="movement.js"> </script>
     <script src="key.js"> </script>
+    <script src="spin.js"> </script>
 </html>
