add gravity in tetris.html

--- a/tetris.html
+++ b/tetris.html
@@ -23,4 +23,5 @@
     <script src="movement.js"> </script>
     <script src="key.js"> </script>
     <script src="spin.js"> </script>
+    <script src="gravity.js"> </script>
 </html>
