--- a/tetris.html
+++ b/tetris.html
@@ -12,7 +12,7 @@
     <body>
         <div id = "design">
             <button type = "button" onclick = "init()"> New game! </button>
-            <!-- <div id = "ScoreTetris"> </div> -->
+            <div id = "ScoreTetris"> </div>
         </div>
         <div id = "BoardTetris"> </div>  
     </body> 
@@ -24,4 +24,5 @@
     <script src="key.js"> </script>
     <script src="spin.js"> </script>
     <script src="gravity.js"> </script>
+    <script src="calculate_score.js"> </script>
 </html>
