added shadow piece (painful)

--- a/tetris.html
+++ b/tetris.html
@@ -25,4 +25,5 @@
     <script src="spin.js"> </script>
     <script src="gravity.js"> </script>
     <script src="calculate_score.js"> </script>
+    <script src="shadow_piece.js"> </script>
 </html>
