change the way to call current_piece function

--- a/tetris.html
+++ b/tetris.html
@@ -19,6 +19,7 @@
     <script src="color.js"> </script>
     <script src="clear_line.js"> </script>
     <script src="generate.js"> </script>
+    <script src="pieces.js"> </script>
     <script src="tetris.js"> </script>
     <script src="movement.js"> </script>
     <script src="key.js"> </script>
