--- a/tetris.html
+++ b/tetris.html
@@ -16,21 +16,25 @@
             <div id = "ScoreTetris"> </div>
         </div>
         <div class = "board_design">
-            <div id = "Holded_piece"> </div>  
-            <div id = "BoardTetris"> </div>  
+            <div id = "Holded_piece"> </div> 
+            <div class = "queue_design">
+                <div id = "BoardTetris"> </div>
+                <div id = "Queue"> </div>
+            </div>  
         </div>
         
     </body> 
-    <script src="color.js"> </script>
-    <script src="clear_line.js"> </script>
-    <script src="generate.js"> </script>
-    <script src="pieces.js"> </script>
+    <script src="calculate_score.js"> </script>
     <script src="hold.js"> </script>
     <script src="tetris.js"> </script>
-    <script src="movement.js"> </script>
+    <script src="queue.js"> </script>
+    <script src="initialize.js"> </script>
     <script src="key.js"> </script>
+    <script src="movement.js"> </script>
     <script src="spin.js"> </script>
+    <script src="color.js"> </script>
+    <script src="clear_line.js"> </script>
+    <script src="pieces.js"> </script>
     <script src="gravity.js"> </script>
-    <script src="calculate_score.js"> </script>
     <script src="shadow_piece.js"> </script>
 </html>
