--- a/tetris.html
+++ b/tetris.html
@@ -11,17 +11,16 @@
     </head>
     <body>
         <div class = "button_design">
-            <button type = "button" onclick = "init()"> New game! </button>
+            <button type = "button" onclick = "Classic_tetris()"> Classic mode </button>
             <div id = "ScoreTetris"> </div>
         </div>
         <div class = "board_design">
-            <div id = "Holded_piece"> </div> 
+            <div id = "Held_piece"> </div> 
             <div class = "queue_design">
                 <div id = "BoardTetris"> </div>
                 <div id = "Queue"> </div>
             </div>  
         </div>
-        
     </body> 
     <script src="calculate_score.js"> </script>
     <script src="hold.js"> </script>
