added flashlight & blindfold mode

--- a/tetris.html
+++ b/tetris.html
@@ -12,6 +12,10 @@
     <body>
         <div class = "button_design">
             <button type = "button" onclick = "Classic_tetris()"> Classic mode </button>
+            <button type = "button" onclick = "Flashlight()"> Flashlight </button>
+            <button type = "button" onclick = "Blindfold()"> Blindfold </button>
+        </div>
+        <div class = "button_design">
             <div id = "ScoreTetris"> </div>
         </div>
         <div class = "board_design">
