added dt, hr, hd

--- a/tetris.html
+++ b/tetris.html
@@ -14,6 +14,9 @@
             <button type = "button" onclick = "Classic_tetris()"> Classic mode </button>
             <button type = "button" onclick = "Flashlight()"> Flashlight </button>
             <button type = "button" onclick = "Blindfold()"> Blindfold </button>
+            <button type = "button" onclick = "Hidden()"> Hidden </button>
+            <button type = "button" onclick = "Hard_rock()"> Hard-rock </button>
+            <button type = "button" onclick = "Double_time()"> Double-time </button>
         </div>
         <div class = "button_design">
             <div id = "ScoreTetris"> </div>
