--- a/tetris.html
+++ b/tetris.html
@@ -11,12 +11,12 @@
     </head>
     <body>
         <div class = "button_design">
-            <button type = "button" onclick = "Classic_tetris()"> Classic mode </button>
-            <button type = "button" onclick = "Flashlight()"> Flashlight </button>
-            <button type = "button" onclick = "Blindfold()"> Blindfold </button>
-            <button type = "button" onclick = "Hidden()"> Hidden </button>
-            <button type = "button" onclick = "Hard_rock()"> Hard-rock </button>
-            <button type = "button" onclick = "Double_time()"> Double-time </button>
+            <button type = "button" id = "mode1" onclick = "Classic_tetris()"> Classic mode </button>
+            <button type = "button" id = "mode2" onclick = "Flashlight()"> Flashlight </button>
+            <button type = "button" id = "mode3" onclick = "Blindfold()"> Blindfold </button>
+            <button type = "button" id = "mode4" onclick = "Hidden()"> Hidden </button>
+            <button type = "button" id = "mode5" onclick = "Hard_rock()"> Hard-rock </button>
+            <button type = "button" id = "mode6" onclick = "Double_time()"> Double-time </button>
         </div>
         <div class = "button_design">
             <div id = "ScoreTetris"> </div>
