fixed bugs in blindfold mode

--- a/tetris.html
+++ b/tetris.html
@@ -18,7 +18,7 @@
             <button type = "button" id = "mode5" onclick = "Hard_rock()"> Hard-rock </button>
             <button type = "button" id = "mode6" onclick = "Double_time()"> Double-time </button>
         </div>
-        <div class = "button_design">
+        <div class = "score_design">
             <div id = "ScoreTetris"> </div>
         </div>
         <div class = "board_design">
