fixed hard drop bugs

--- a/tetris.html
+++ b/tetris.html
@@ -16,7 +16,8 @@
             <button type = "button" id = "mode3" style = "background-color: red" onclick = "Hidden()"> Hidden </button>
             <button type = "button" id = "mode4" style = "background-color: red" onclick = "Hard_rock()"> Hard-rock </button>
             <button type = "button" id = "mode5" style = "background-color: red" onclick = "Double_time()"> Double-time </button>
-            <button type = "button" id = "mode6" onclick = "Start_game()"> Start game </button>
+            <button type = "button" id = "mode6" style = "background-color: red" onclick = "Nightmare()"> Nightmare </button>
+            <button type = "button" id = "mode7" onclick = "Start_game()"> Start game </button>
         </div>
         <div class = "score_design">
             <div id = "ScoreTetris"> </div>
