added count cleared lines

--- a/tetris.html
+++ b/tetris.html
@@ -24,7 +24,10 @@
             <div id = "ScoreTetris"> </div>
         </div>
         <div class = "board_design">
-            <div id = "Held_piece"> </div> 
+            <div class = "lines_design"> 
+                <div id = "Held_piece"> </div> 
+                <div id = "Lines"> </div>
+            </div>
             <div class = "queue_design">
                 <div id = "BoardTetris"> </div>
                 <div id = "Queue"> </div>
