update gravity increase

--- a/tetris.html
+++ b/tetris.html
@@ -26,6 +26,7 @@
         <div class = "board_design">
             <div class = "lines_design"> 
                 <div id = "Held_piece"> </div> 
+                <div id = "Text"> </div> 
                 <div id = "Lines"> </div>
             </div>
             <div class = "queue_design">
