utilize code & debugged hard drop

--- a/tetris.html
+++ b/tetris.html
@@ -28,6 +28,8 @@
                 <div id = "Held_piece"> </div> 
                 <div id = "Text"> </div> 
                 <div id = "Lines"> </div>
+                <div id = "Text2"> </div> 
+                <div id = "Level"> </div>
             </div>
             <div class = "queue_design">
                 <div id = "BoardTetris"> </div>
