added text after player cleared lines

--- a/tetris.html
+++ b/tetris.html
@@ -26,6 +26,9 @@
         <div class = "board_design">
             <div class = "lines_design"> 
                 <div id = "Held_piece"> </div> 
+                <div id = "Tspin"> </div>
+                <div id = "Sent_type"> </div>
+                <div id = "Space"> </div>
                 <div id = "Text"> </div> 
                 <div id = "Lines"> </div>
                 <div id = "Text2"> </div> 
